fix(voucher): correct voucher application logic for customers